# mail2task

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  test.yml
mail2task/: CLAUDE.md  __init__.py  __main__.py  app.py  enrich.py  mail.py  models.py  tasks.py
tests/: test_app.py  test_enrich.py  test_mail.py  test_tasks.py
