[project]
name = "mail2task"
dynamic = ["version"]
description = "Poll an IMAP folder, enrich each email with Ollama, and create Todoist tasks."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "todoist-api-python>=4.0.0,<5",
    "ollama",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "beautifulsoup4>=4.15.0",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
mail2task = "mail2task.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "mail2task/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["mail2task"]
